Fix white space on contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,7 @@ footer p {
 @media (min-width: 768px) {
     .contact-page 
     {
-    background: url("../images/contact-bg.jpg") no-repeat center center;
+    background: url("../images/contact-bg.jpg") center center;
     height: 100vh;
     }
 }
